# blobstreamx

./: .env.example  .gitignore  .gitmodules  Cargo.toml  README.md  go.mod  go.sum  rust-toolchain  succinct.json
.github/workflows/: ci.yml
abi/: BlobstreamX.abi.json
bindings/: BlobstreamX.go
blobstream/: .env.example  Cargo.toml
blobstream/abi/: ZKBlobstream.abi.json
blobstream/contracts/: .gitignore  .gitmodules  remappings.txt
blobstream/contracts/cache/: solidity-files-cache.json
blobstream/contracts/script/: Blobstream.s.sol  BlobstreamX.s.sol  QGB.s.sol  ZKBlobstream.s.sol  ZKBlobstream.sol  ZKTendermintLightClient.s.sol
blobstream/contracts/src/: Blobstream.sol  BlobstreamX.sol  IBlobstream.sol  IZKBlobstream.sol  IZKTendermintLightClient.sol  QGB.sol  ZKBlobstream.sol
blobstream/contracts/src/interfaces/: IBlobstreamX.sol
blobstream/contracts/test/: BlobstreamX.t.sol  QGB.t.sol  ZKBlobstream.sol  ZKTendermintLightClient.t.sol
blobstream/src/: builder.rs  circuit.rs  combined_skip.rs  combined_step.rs  commitment.rs  input.rs  vars.rs
circuits/: .env.example  Cargo.toml  builder.rs  combined_skip.rs  combined_step.rs  config.rs  consts.rs  data_commitment.rs  fetcher.rs  header_range.rs  input.rs  lib.rs  next_header.rs  vars.rs
circuits/fixtures/mocha-3/: celestia_block.json
circuits/fixtures/mocha-3/10000/: signed_block.json
circuits/fixtures/mocha-3/10999/: signed_block.json
circuits/fixtures/mocha-3/11499/: signed_block.json
circuits/src/: commitment.rs  consts.rs  fixture.rs  inputs.rs  lib.rs  shared.rs  skip.rs  step.rs  validator.rs  variables.rs  verify.rs  voting.rs
circuits/src/builder/: shared.rs  validator.rs  verify.rs
circuits/src/input/: conversion.rs  mod.rs  tendermint_utils.rs  utils.rs
circuits/src/input_data/: mod.rs  tendermint_utils.rs  types.rs
contracts/: .env.example  Makefile  README.md  foundry.toml  go.mod  remappings.txt
contracts/script/: Blobstream.s.sol  BlobstreamX.s.sol  Counter.s.sol  Deploy.s.sol  DeployWithCustomProver.s.sol  FunctionID.s.sol  QGB.s.sol  UpdateFunctionIds.s.sol  UpdateFunctionIds.sol  ZKTendermintLightClient.s.sol
contracts/src/: Blobstream.sol  BlobstreamX.sol  Counter.sol  FlatBlobstream.sol  IBlobstream.sol  IZKTendermintLightClient.sol  QGB.sol  ZKTendermintLightClient.sol
contracts/src/interfaces/: IBlobstreamX.sol  ITendermintX.sol
contracts/test/: Blobstream.t.sol  BlobstreamX.t.sol  Counter.t.sol  QGB.t.sol  ZKTendermintLightClient.t.sol
contracts/wrappers/BlobstreamX.sol/: wrapper.go
data_commitment/: Cargo.toml
data_commitment/src/: builder.rs  circuit.rs  combined_skip.rs  combined_step.rs  commitment.rs  hint.rs  input.rs  lib.rs  subchain_verification.rs  vars.rs
fixtures/mocha-4/10000-10002/: data_commitment.json
scripts/: abigen.sh  binding.sh  upload_release.sh
src/: bit_operations.rs  block.rs  combined_skip.rs  commitment.rs  constants.rs  consts.rs  fixture.rs  generate_tests.rs  header.rs  helper.rs  inputs.rs  lib.rs  main.rs  merkle.rs  scripts.rs  sha256.rs  shared.rs  signature.rs  skip.rs  step.rs  u32.rs  u8.rs  utils.rs  validator.rs  variables.rs  vars.rs  verify.rs  voting.rs
src/circuits/: commitment.rs  header.rs  mod.rs  signature.rs  validator.rs  vars.rs  verify.rs  voting.rs
src/fixtures/: block.json  generate_tests.rs  signature_verify_data.json  signed_block.json  signed_celestia_block.json
src/fixtures/10000/: signed_block.json
src/fixtures/100000/: signed_block.json
src/fixtures/11000/: signed_block.json
src/fixtures/11104/: signed_block.json
src/fixtures/11105/: signed_block.json
src/fixtures/11500/: signed_block.json
src/fixtures/11999/: signed_block.json
src/fixtures/12000/: signed_block.json
src/fixtures/14999/: signed_block.json
src/fixtures/15000/: signed_block.json
src/fixtures/336715/: signed_block.json
src/fixtures/5/: signed_block.json
src/fixtures/50000/: signed_block.json
src/fixtures/59999/: signed_block.json
src/fixtures/60000/: signed_block.json
src/fixtures/75000/: signed_block.json
src/fixtures/99999/: signed_block.json
src/input_data/: mod.rs  tendermint_utils.rs  types.rs  utils.rs
src/scripts/: block.json  celestia_block.json  example.json  generate_tests.rs  signed_block.json  signed_celestia_block.json
zk-tendermint/: .env.example  Cargo.toml
zk-tendermint/contracts/cache/: solidity-files-cache.json
zk-tendermint/contracts/script/: QGB.s.sol  ZKTendermintLightClient.s.sol
zk-tendermint/contracts/src/: IZKTendermintLightClient.sol  TendermintX.sol  ZKTendermintLightClient.sol
zk-tendermint/src/: skip.rs  step.rs
zk-tendermint/src/builder/: shared.rs  validator.rs  verify.rs  voting.rs
zk-tendermint/src/input/: conversion.rs  mod.rs  tendermint_utils.rs
(+29 files in other folders)
