[package]
name = "blobstreamx"
version = "0.1.0"
edition = "2021"

[lib]
path = "circuits/lib.rs"

[[bin]]
name = "local_relay"
path = "bin/local_relay.rs"

[[bin]]
name = "next_header"
path = "bin/next_header.rs"

[[bin]]
name = "header_range"
path = "bin/header_range.rs"

[[bin]]
name = "data_commitment"
path = "bin/data_commitment.rs"

[[bin]]
name = "blobstreamx"
path = "bin/blobstreamx.rs"

[[bin]]
name = "genesis"
path = "bin/genesis.rs"

[[bin]]
name = "fetch"
path = "bin/fetch.rs"

[features]
ci = []

[profile.release]
opt-level = 3
incremental = true
#lto = "fat"
#codegen-units = 1

[profile.bench]
opt-level = 3

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.18", features = ["derive"] }
digest = "0.10.7"
dotenv = "0.15.0"
ed25519-consensus = "2.1.0"
env_logger = "0.10.0"
ethers = "2.0.9"
itertools = "0.11.0"
log = "0.4.19"
num = "0.4.1"
plonky2x = { git = "https://github.com/succinctlabs/succinctx.git" }
succinct-client = { git = "https://github.com/succinctlabs/succinctx.git" }
rand = "0.8.5"
reqwest = "0.11.18"
serde = "1.0.175"
serde_json = "1.0.103"
sha2 = "0.10.7"
subtle-encoding = "0.5.1"
tendermint = "0.33.0"
tendermint-proto = "0.33.0"
tokio = { version = "1.29.1", features = ["full"] }
tendermintx = { git = "https://github.com/succinctlabs/tendermintx.git", branch = "ratan/harden-rpc" }
async-trait = "0.1.73"
alloy-sol-types = "0.4.2"
alloy-primitives = "0.4.2"
