[package]
edition = "2021"
name = "blobstreamx"
version = "0.1.0"

[lib]
path = "circuits/lib.rs"

[[bin]]
name = "local_relay"
path = "bin/local_relay.rs"

[[bin]]
name = "next_header"
path = "bin/next_header.rs"

[[bin]]
name = "header_range_1024"
path = "bin/header_range_1024.rs"

[[bin]]
name = "header_range_2048"
path = "bin/header_range_2048.rs"

[[bin]]
name = "next_header_mocha"
path = "bin/next_header_mocha.rs"

[[bin]]
name = "header_range_mocha"
path = "bin/header_range_mocha.rs"

[[bin]]
name = "blobstreamx"
path = "bin/blobstreamx.rs"

[[bin]]
name = "genesis"
path = "bin/genesis.rs"

[[bin]]
name = "fetch"
path = "bin/fetch.rs"

[features]
ci = []

[profile.release]
incremental = true
opt-level = 3
#lto = "fat"
#codegen-units = 1

[profile.bench]
opt-level = 3

[dependencies]
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
reqwest-middleware = { version = "0.3.2", default-features = false, features = [
    "json",
    "rustls-tls",
] }
alloy-primitives = "0.4.2"
alloy-sol-types = "0.4.2"
anyhow = "1.0.71"
async-trait = "0.1.73"
clap = { version = "4.3.18", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
ethers = "2.0.9"
futures = "0.3.30"
log = "0.4.19"
plonky2x = { git = "https://github.com/succinctlabs/succinctx.git", tag = "v1.0.3" }
reqwest-retry = "0.6.0"
serde = "1.0.175"
serde_json = "1.0.103"
subtle-encoding = "0.5.1"
succinct-client = { git = "https://github.com/succinctlabs/succinctx.git" }
tendermint = "0.33.0"
tendermint-proto = "0.33.0"
tendermintx = { git = "https://github.com/succinctlabs/tendermintx.git", tag = "v1.0.0" }
tokio = { version = "1.29.1", features = ["full"] }
